# tnss

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  deny.toml  justfile  setup.sh
.github/workflows/: ci.yml
crates/algebra/: Cargo.toml
crates/algebra/benches/: factorization.rs
crates/algebra/src/: factor.rs  gf2_solver.rs  lib.rs  smoothness.rs
crates/algebra/tests/: integration_tests.rs
crates/cli/: Cargo.toml
crates/cli/examples/: basic_factorization.rs  batch_factorization.rs  test_factorization.rs
crates/cli/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/benches/: primes.rs
crates/core/src/: index_slicing.rs  lib.rs  primes.rs
crates/lattice/: Cargo.toml
crates/lattice/benches/: lattice_reduction.rs
crates/lattice/src/: babai.rs  bkz.rs  lattice.rs  lib.rs  pruning.rs  segment_lll.rs
crates/sampler/: Cargo.toml
crates/sampler/src/: lib.rs  sampler.rs
crates/tensor/: Cargo.toml
crates/tensor/benches/: sampler.rs
crates/tensor/src/: adaptive_bond.rs  classical_sampler.rs  hamiltonian.rs  lib.rs  opes.rs  ttn.rs
docs/: 00-overview.md  01-stage-1-lattice-construction.md  02-stage-2-basis-reduction.md  03-stage-3-cvp-baseline.md  04-stage-4-tensor-network.md  05-stage-5-optimization-sampling.md  06-stage-6-smoothness-verification.md  07-stage-7-factor-extraction.md  08-implementation-notes.md  12-algorithm-improvements.md  README.md
src/: adaptive_bond.rs  babai.rs  bkz.rs  factor.rs  gf2_solver.rs  hamiltonian.rs  index_slicing.rs  lattice.rs  lib.rs  main.rs  opes.rs  primes.rs  pruning.rs  sampler.rs  segment_lll.rs  smoothness.rs  ttn.rs
