[package]
name = "tnss"
version = "0.1.0"
edition = "2024"

[dependencies]
lll-rs = "0.2.0"
rug = "1.29"
num-traits = "0.2"
num-integer = "0.1"
rand = "0.9"
rand_chacha = "0.9"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
ndarray = { version = "0.15", features = ["rayon"] }
rayon = "1.10"
ndarray-linalg = { version = "0.16", optional = true }

[dev-dependencies]

[[bin]]
name = "tnss"
path = "src/main.rs"
