[package]
name = "tnss-sampler"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Optimization and sampling strategies for TNSS"

[features]
default = ["parallel"]
parallel = ["rayon", "ndarray/rayon"]

[dependencies]
# tnss-lattice: used for lattice basis access in Hamiltonian sampling pipelines
tnss-lattice = { path = "../lattice" }
# tnss-tensor: provides CvpHamiltonian and TreeTensorNetwork for variational ansatz
tnss-tensor = { path = "../tensor" }
tnss-core = { path = "../core" }
rug = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
log = { workspace = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
